[package]
name = "mblog"
version = "0.1.0"
authors = ["Daniel <daniel65536@gmail.com>"]

[dependencies]
pulldown-cmark = { version = "0.1.0", default-features = false }
nom = { version = "3.2.1", default-features = true }
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9.2"
inflate = "0.3.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = 'abort'
