[package]
name = "acdat"
version = "0.1.0"
authors = ["Daniel <daniel65536@gmail.com>"]

[dependencies]
fnv = "1.0"
nom = "3.2"
rand = "0.4"
rayon = "0.9"

[dev-dependencies]
hyphenation = "0.6"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 4
panic = 'abort'
